--- a/app/src/main/res/layout/users_field.xml
+++ b/app/src/main/res/layout/users_field.xml
@@ -2,20 +2,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="56dp"
-    android:background="#1E1E1E">
+    android:background="@color/color_background_primary">
 
     <EditText
         android:id="@+id/et_users"
         android:layout_width="310dp"
         android:layout_height="56dp"
-        android:layout_marginLeft="20dp"
-        android:backgroundTint="#1E1E1E"
+        android:layout_marginStart="20dp"
+        android:backgroundTint="@color/color_background_primary"
         android:fontFamily="sans-serif-thin"
-        android:hint="Users..."
+        android:hint="@string/users"
         android:maxLines="1"
-        android:paddingLeft="30dp"
+        android:paddingStart="30dp"
         android:textColor="@color/white"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="@color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -24,7 +24,7 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_gravity="end|center"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="28dp"
         android:src="@drawable/icon_search" />
 
 
