--- a/app/src/main/res/drawable/bg_emoji_clicked.xml
+++ b/app/src/main/res/drawable/bg_emoji_clicked.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <solid android:color="#3A3A3A" />
+    <solid android:color="@color/emoji_clicked" />
 </shape>
