--- a/app/src/main/res/drawable/bg_empty_state.xml
+++ b/app/src/main/res/drawable/bg_empty_state.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#070707" />
+        android:color="@color/black" />
     <corners android:radius="15dp" />
     <solid android:color="@color/shimmer_color" />
 </shape>
