--- a/app/src/main/res/drawable/draw_bottom_sheet.xml
+++ b/app/src/main/res/drawable/draw_bottom_sheet.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<!--    <stroke-->
-<!--        android:width="2dp"-->
-<!--        android:color="@color/white" />-->
     <corners android:radius="42dp" />
-    <solid android:color="#555555" />
+    <solid android:color="@color/bottom_sheet_draw" />
 </shape>
