--- a/app/src/main/res/drawable/icon_arrow_down.xml
+++ b/app/src/main/res/drawable/icon_arrow_down.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="15">
   <path
       android:pathData="M19.02,0L22.5,3.525L11.25,15L0,3.525L3.48,0L11.25,7.925L19.02,0Z"
-      android:fillColor="#919191"/>
+      android:fillColor="@color/icon_color"/>
 </vector>
