--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -14,7 +14,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:contentDescription="tabLayout" />
+        android:contentDescription="@string/tablayout" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fragmentViewPager"
