--- a/app/src/main/res/layout/item_channels_stream_shimmer.xml
+++ b/app/src/main/res/layout/item_channels_stream_shimmer.xml
@@ -8,8 +8,8 @@
         android:layout_width="276dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center"
-        android:layout_marginLeft="20dp"
-        android:text="#Stream "
+        android:layout_marginStart="20dp"
+        android:text="@string/stream"
         android:textColor="@color/shimmer_color"
         android:textColorHint="@color/white"
         android:textSize="18sp" />
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|center"
-        android:layout_marginRight="42dp"
+        android:layout_marginEnd="42dp"
         android:background="@drawable/icon_arrow_down" />
 
     <View
