--- a/app/src/main/res/layout/item_channels_topic.xml
+++ b/app/src/main/res/layout/item_channels_topic.xml
@@ -10,14 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center"
-        android:layout_marginLeft="42dp"
+        android:layout_marginStart="42dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:shadowColor="@color/black"
         android:shadowDx="3"
         android:shadowDy="3"
         android:shadowRadius="3"
-        android:textColor="#FAFAFA"
+        android:textColor="@color/text_color"
         android:textSize="18sp"
         tools:text="text" />
 
