--- a/app/src/main/res/layout/item_people.xml
+++ b/app/src/main/res/layout/item_people.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_people_avatar"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_launcher_background"
         app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         tools:src="@drawable/ic_launcher_background" />
@@ -29,10 +29,10 @@
         android:id="@+id/tv_people_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="74dp"
+        android:layout_marginStart="74dp"
         android:layout_marginTop="8dp"
-        android:text="Name Surname"
-        android:textColor="#FAFAFA"
+        android:text="@string/name_surname"
+        android:textColor="@color/text_color"
         android:textSize="20sp"
         tools:text="@tools:sample/full_names" />
 
@@ -41,11 +41,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_people_email"
         android:layout_gravity="bottom"
-        android:layout_marginLeft="74dp"
+        android:layout_marginStart="74dp"
         android:layout_marginBottom="8dp"
-        android:text="darrel@gmail.com"
+        android:text="@string/email_example"
         android:textColor="#A1A1A1"
         android:textSize="16sp"
-        tools:text="darrel@gmail.com" />
+        tools:text="@string/email_example" />
 
 </FrameLayout>
