--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,13 +11,27 @@
     <color name="mtrl_orange_500">#FF5722</color>
     <color name="mtrl_orange_700">#D84315</color>
     <color name="mtrl_green_500">#4CAF50</color>
-
     <color name="mtrl_blue_500">#2196F3</color>
-    <color name="text_color">#FAFAFA</color>
-    <color name="time_color">#A1A1A1</color>
 
-    <color name="colorPrimaryBlack">#1E1E1E</color>
-    <color name="colorPrimaryBlue">#2A9D8F</color>
-    <color name="colorBackground">#121212</color>
+    <color name="text_color">#FAFAFA</color>
+    <color name="time_color_left">#A1A1A1</color>
+    <color name="time_color_right">#E5E5E5</color>
+    <color name="text_color_secondary">#CCCCCC</color>
+    <color name="tab_indicator_color">#219653</color>
+    <color name="emoji_clicked">#3A3A3A</color>
+
+    <color name="color_primary">#2A9D8F</color>
+    <color name="color_window_background">#121212</color>
+    <color name="color_background_primary">#1E1E1E</color>
+    <color name="color_background_secondary">#1C1C1C</color>
     <color name="shimmer_color">#dddddd</color>
+    <color name="indicator_idle">#F09224</color>
+    <color name="indicator_off">#E93939</color>
+    <color name="indicator_on">#4AB54D</color>
+    <color name="date_color">#070707</color>
+    <color name="input_field">#282828</color>
+    <color name="bottom_sheet_draw">#555555</color>
+    <color name="search_field_draw">#323232</color>
+    <color name="icon_color">#919191</color>
+    <color name="date_text_color">#999999</color>
 </resources>
