--- a/app/src/main/res/layout/view_message_right_shimmer.xml
+++ b/app/src/main/res/layout/view_message_right_shimmer.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="end"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:gravity="end">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/background"
         style="@style/CardViewRight"
-        app:cardBackgroundColor="@color/shimmer_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp">
+        android:layout_marginEnd="12dp"
+        app:cardBackgroundColor="@color/shimmer_color">
 
         <TextView
             android:id="@+id/tv_msg_text"
@@ -21,8 +20,7 @@
             android:maxWidth="220dp"
             android:text="asdfjadslfjjljdjlkdfl;kajdfl;l;asdkfjl;asdjfl;afjlkadsfjl;asdjflafjl;aks"
             android:textColor="@color/shimmer_color"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
     </androidx.cardview.widget.CardView>
 </LinearLayout>
