hw8: work without internet

--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -6,11 +6,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <include
         android:id="@+id/users_field"
         layout="@layout/users_field"
         android:layout_width="match_parent"
         android:layout_height="56dp" />
+
+    <include
+        android:id="@+id/emptyState"
+        layout="@layout/view_empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_people"
