--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginTop="140dp"
     android:layout_height="match_parent"
+    android:layout_marginTop="140dp"
     android:orientation="vertical">
 
     <com.facebook.shimmer.ShimmerFrameLayout
@@ -22,7 +22,7 @@
                 android:layout_height="186dp"
                 android:layout_gravity="center"
                 android:background="@color/shimmer_color"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15dp"/>
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -40,11 +40,17 @@
                 android:layout_marginTop="16dp"
                 android:background="@color/shimmer_color"
                 android:text="@string/online"
-                android:textSize="16sp"
-                />
+                android:textSize="16sp" />
 
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <include
+        android:id="@+id/emptyState"
+        layout="@layout/view_empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_profile_avatar"
@@ -70,13 +76,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"
         android:gravity="center"
-        tools:visibility="visible"
         android:text="online"
         android:textColor="@color/indicator_on"
         android:textSize="16sp"
-        tools:text="online" />
+        android:visibility="gone"
+        tools:text="online"
+        tools:visibility="visible" />
 
 
 </LinearLayout>
