--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,6 +57,7 @@
             android:id="@+id/iv_profile_avatar"
             android:layout_width="186dp"
             android:layout_height="186dp"
+            android:visibility="gone"
             android:layout_gravity="center"
             app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15dp"
             tools:src="@drawable/ic_launcher_background" />
@@ -65,6 +66,7 @@
             android:id="@+id/tv_profile_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:gravity="center"
@@ -75,6 +77,7 @@
         <TextView
             android:id="@+id/online"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
